KSENROLL-12011: Fix for layout issues and added variable to alert messages for icon/image positioning.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@66591 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/util/alert.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/util/alert.less
@@ -1,5 +1,6 @@
 /**** Alert messages ****/
 
+@iconPosition: calc(6px) center;
 
 .util-Alert a {
   cursor: pointer;
@@ -23,7 +24,7 @@
 .util-Alert--success {
     background-image: url("../images/validation/success.png");
     background-repeat: no-repeat;
-    background-position: calc(2%) center;
+    background-position: @iconPosition;
     background-color: @successBackground;   // #dff0d8;
     border-color: @successBorder;  //#D6E9C6;
     color: @successText; // #3B723B;
@@ -34,7 +35,7 @@
 .util-Alert--information {
     background-image: url("../images/validation/info.png");
     background-repeat: no-repeat;
-    background-position: calc(2%) center;
+    background-position: @iconPosition;
     background-color: @infoText; //#D9EDF7;
     border-color: @infoText;  //#BCE8F1;
     color: @infoText; //#2A617D;
@@ -44,7 +45,7 @@
 .util-Alert--warning {
     background-image: url("../images/validation/warning.png");
     background-repeat: no-repeat;
-     background-position: calc(2%) center;
+     background-position: @iconPosition;
     //background-position: left center;
     background-color: @warningBackground; //#FCF8E3;
     border-color: @warningBorder;  //#FBEED5;
@@ -56,7 +57,7 @@
 .util-Alert--error {
     background-image: url("../images/validation/error.png");
     background-repeat: no-repeat;
-    background-position: calc(2%) center;
+    background-position: @iconPosition;
     background-color: @errorBackground; //#F2DEDE;
     border-color: @errorBorder;  //#EFD3D7;
     color: @errorText; //#A3403C;
